--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,7 @@
-page-home {
+page-contact {
 
+    ion-content {
+        background-color: black !important;
+        color: white !important;
+    }
 }
