--- a/src/pages/association/association.scss
+++ b/src/pages/association/association.scss
@@ -4,13 +4,6 @@ page-association {
         background-color: black !important;
         color: white !important;
     }
-
-    body {
-        width: 100%;
-        height: 100%;
-        background: #000;
-        overflow: hidden;
-    }
     
     .fade {
         position: relative;
@@ -34,23 +27,26 @@ page-association {
         line-height: 150%;
         perspective: 400px;
         text-align: justify;
-    }
-    
-    .crawl {
-        position: relative;
-        top: 99999px;
-        transform-origin: 50% 100%;
-        animation: crawl 60s linear;
-    }
-    
-    .crawl > .title {
-        font-size: 90%;
-        text-align: center;
-    }
-    
-    .crawl > .title h1 {
-        margin: 0 0 100px;
-        text-transform: uppercase;
+        
+        .crawl {
+            position: relative;
+            top: 99999px;
+            transform-origin: 50% 100%;
+            animation: crawl 60s linear;
+            & > .title {
+                font-size: 90%;
+                text-align: center;
+                h1 {
+                    margin: 0 0 100px;
+                    text-transform: uppercase;
+                }
+            }
+            ion-img {
+                background: transparent;
+                width: 100%;
+                margin: auto;
+            }
+        }
     }
     
     @keyframes crawl {
