--- a/src/pages/theme/theme.scss
+++ b/src/pages/theme/theme.scss
@@ -1,8 +1,21 @@
 page-theme {
+    
+    ion-header {
+        background-color: black !important;
+        color: white !important;
+        * {
+            background-color: inherit !important;
+            color: inherit !important;
+        }
+    }
 
     ion-content {
         background-color: black !important;
         color: white !important;
+        * {
+            background-color: inherit !important;
+            color: inherit !important;
+        }
     }
 
     ion-col[col-12] button, ion-col[col-6] button {
