--- a/src/pages/planet/planet.scss
+++ b/src/pages/planet/planet.scss
@@ -3,6 +3,7 @@ page-planet {
     ion-header {
         background-color: black !important;
         color: white !important;
+
         * {
             background-color: inherit !important;
             color: inherit !important;
@@ -12,5 +13,15 @@ page-planet {
     ion-content {
         background-color: black !important;
         color: white !important;
+
+        * {
+            background-color: inherit !important;
+            color: inherit !important;
+        }
+
+        ion-img {
+            background: transparent;
+            margin: auto;
+        }
     }
 }
